test_regress/t/t_interface_generic_modport_bad.out
%Error: t/t_interface_generic_modport_bad.v:11:34: syntax error, unexpected '.', expecting ')'
   11 | module GenericModule (interface a.mp);
      |                                  ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
